# agentgrep

./: .gitignore  .tmuxp.yaml  .tool-versions  AGENTS.md  CHANGES  README.md  conftest.py  fastmcp.json  justfile  pyproject.toml
.agents/skills/: benchmark.md  profile.md
.agents/skills/testing-mcp-with-cli-agents/: SKILL.md
.agents/skills/textual-non-blocking-pump/: SKILL.md
.claude/skills/: testing-mcp-with-cli-agents
.github/workflows/: docs.yml  tests.yml
docs/: AGENTS.md  __init__.py  clients.md  conf.py  history.md  index.md  installation.md  justfile  manifest.json  package.json  pnpm-lock.yaml  quickstart.md  redirects.txt  storage-catalog.md
docs/_ext/: __init__.py  agentgrep_fastmcp.py  lexers.py
docs/_ext/storages/: __init__.py  _badges.py  _css.py  _directives.py  _domain.py  _roles.py  _utils.py
docs/_ext/terminal_demo/: __init__.py
docs/_ext/widgets/: __init__.py  _base.py  _prehydrate.py  cli_install.py  library_install.py  mcp_install.py
docs/_static/css/: project-admonitions.css  project-cards.css
docs/_static/demos/: demo-env.sh  seed_demo_home.py  setup.sh
docs/_static/js/: prompt-copy.js
docs/_widgets/cli-install/: widget.css  widget.html  widget.js
docs/_widgets/library-install/: widget.css  widget.html  widget.js
docs/_widgets/mcp-install/: widget.css  widget.html  widget.js
docs/backends/: antigravity-cli.md  antigravity-ide.md  antigravity.md  claude.md  codex.md  cursor-cli.md  cursor-ide.md  cursor.md  gemini.md  grok.md  index.md  opencode.md  pi.md  vscode.md
docs/backends/unsupported/: index.md  windsurf.md
docs/cli/: bookmark.md  export.md  find.md  fuzzy.md  grep.md  index.md  insights.md  reference.md  search.md  ui.md
docs/cli/db/: explain.md  index.md  status.md  sync.md
docs/cli/insights/: analyze.md  explain.md  index.md  list.md
docs/cli/suggestions/: index.md  list.md  render.md  show.md
docs/dev/: benchmark.md  db-index.md  index.md  otel-cost-model.md  storage-catalog.md
docs/dev/adr/: 0001-storage-version-detection.md  0002-pure-python-rust-accelerator-module-compatibility-requirements.md  0003-native-boundary-and-execution-architecture.md  0004-headless-query-planning-and-non-blocking-execution.md  0005-local-insights-reports-and-model-backed-enrichment.md  0005-local-insights-reports-and-optional-semantic-backends.md  0005-persistent-agentic-db-index.md  0006-agentic-insights-engine.md  0006-public-cli-mcp-surface-contract.md  0007-query-language-comparison-and-full-queryability.md  0007-suggestion-skills-and-agent-instruction-changes.md  0008-cache-schema-versioning-and-rebuilds.md  0008-opentelemetry-local-observability.md  0008-unsupported-obfuscated-backends.md  0009-agentic-structured-logging.md  0009-cross-host-discovery.md  0010-module-boundaries-and-facade-re-export-contract.md  0011-non-blocking-tui-invariants.md  0012-reusable-tui-widget-architecture.md  0013-pluggable-tui-layouts-and-workflows.md  0014-deductive-narrowing-and-conversation-layout.md  0014-opentelemetry-local-observability.md  0014-result-order-limit-and-streaming-merge.md  0015-agentic-structured-logging.md  0015-deductive-narrowing-and-conversation-layout.md  0015-deterministic-record-identity.md  0015-durable-prompt-corpus-and-derived-search-indexes.md  0015-opentelemetry-local-observability.md  0015-persistent-agentic-db-index.md  0015-universal-raw-storage-and-derived-search-indexes.md  0016-agentic-structured-logging.md  0016-cache-schema-versioning-and-rebuilds.md  0016-durable-bookmarks.md  0016-progressive-deep-search.md  0017-agentic-insights-engine.md  0017-portable-record-export.md  0017-prompt-guided-conversation-routing.md  0018-suggestion-skills-and-agent-instruction-changes.md  0019-durable-prompt-corpus-and-derived-search-indexes.md  0020-progressive-deep-search.md  (+2 more)
docs/getting-started/: configuration.md  index.md  installation.md
docs/insights/: index.md  suggestions.md
docs/mcp/: index.md  prompts.md  reference.md  resources.md  tools.md
docs/reference/api/: agentgrep.md  index.md  mcp.md  ui.md
docs/tui/: index.md  reference.md
scripts/: benchmark.local.toml.example  benchmark.py  benchmark.toml  mcp_swap.py  otel_acceptance.py  otel_smoke.py  profile_engine.py  run_py315.py  run_tachyon.py
scripts/lgtm/: README.md  generate_dashboards.py  generate_pyroscope_source_map.py  grafana-dashboards-agentgrep.yaml  grafana-datasources.yaml  otelcol-config.yaml  pyroscope-config.yaml  up.sh
src/agentex/: __init__.py  __main__.py  mcp.py
src/agentgrep/: __init__.py  __main__.py  _telemetry.py  _telemetry_otel.py  _text.py  _types.py  adapters.py  bookmarks.py  conversations.py  db.py  discovery.py  events.py  export.py  fuzzy.py  identity.py  insights.py  insights_loader.py  mcp.py  origin.py  origin_serializers.py  progress.py  project_context.py  ranking.py  readers.py  record_export.py  records.py  resolve.py  similar.py  store_catalog.py  stores.py  suggestions.py
src/agentgrep/_engine/: __init__.py  (+12 more)
src/pytest_documentation/: __init__.py  collectors.py  core.py  evaluators.py  plugin.py  sandbox.py
tests/: AGENTS.md  __init__.py  _agentgrep_tui_support.py  _tui_export_support.py  conftest.py  test_adapter_coverage.py  test_agent_human_typed.py  test_agent_skills.py  test_agentex.py  test_agentex_mcp.py  test_agentgrep.py  test_agentgrep_mcp.py  test_agentgrep_tui.py  test_agentgrep_tui_identity.py  test_agentgrep_tui_rendering.py  test_agentgrep_tui_streaming.py  test_ansi_colors.py  test_benchmark_script.py  test_bookmark_cli.py  test_bookmark_commands.py  test_bookmark_docs.py  test_bookmarks.py  test_cache_cli.py  test_claude_human_typed.py  test_cli_export.py  test_cli_find.py  test_cli_fuzzy.py  test_cli_grep.py  test_cli_insights.py  test_cli_search.py  test_cli_ui_overlay.py  test_codex_human_typed.py  test_codex_source_authority.py  test_conversations.py  test_db_index.py  test_discovery.py  test_engine_cancellation.py  test_engine_profiling.py  test_events.py  test_export.py  (+87 more)
tests/__snapshots__/: test_module_boundaries.ambr  test_ui_widgets.ambr
tests/samples/: README.md
(+203 files in other folders)
