[project]
name = "agentgrep"
version = "0.1.0a1"
description = "Read-only search for local AI agent prompts and history (Codex, Claude, Cursor)"
requires-python = ">=3.14,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

keywords = ["ai", "codex", "claude", "cursor", "mcp", "search", "agent-history"]
packages = [
  { include = "*", from = "src" },
]
include = [
  { path = "tests", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "conftest.py", format = "sdist" },
]

dependencies = [
  "pydantic>=2.11.3",
  "textual>=3.2.0",
  "fastmcp>=3.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/tony/agentgrep/issues"
Repository = "https://github.com/tony/agentgrep"

[project.scripts]
agentgrep = "agentgrep:main"
agentgrep-mcp = "agentgrep.mcp:main"

[dependency-groups]
dev = [
  # Docs
  "gp-sphinx==0.0.1a20",
  "sphinx-autodoc-api-style==0.0.1a20",
  "sphinx-autodoc-fastmcp==0.0.1a20",
  "sphinx-autobuild",
  # Testing
  "pytest",
  "pytest-asyncio",
  "pytest-rerunfailures>=16.2",
  "pytest-watcher",
  "syrupy>=5.1.0",
  # Lint / typecheck
  "ruff",
  "ty>=0.0.35",
]
docs = [
  "gp-sphinx==0.0.1a20",
  "sphinx-autodoc-api-style==0.0.1a20",
  "sphinx-autodoc-fastmcp==0.0.1a20",
  "sphinx-autobuild",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.exclude-newer-package]
# git-pull packages release in lockstep with their workspaces, so a
# fresh release blocking on the 3-day cooldown blocks every
# contributor's `uv sync` until it clears. `false` exempts each
# from any `exclude-newer` constraint (global or per-user) without
# committing a date that would age into the lockfile. Mirrors the
# pattern at libtmux-mcp/pyproject.toml.
gp-furo-theme = false
gp-sphinx = false
sphinx-autodoc-api-style = false
sphinx-autodoc-argparse = false
sphinx-autodoc-docutils = false
sphinx-autodoc-fastmcp = false
sphinx-autodoc-pytest-fixtures = false
sphinx-autodoc-sphinx = false
sphinx-autodoc-typehints-gp = false
sphinx-fonts = false
sphinx-gp-opengraph = false
sphinx-gp-sitemap = false
sphinx-gp-theme = false
sphinx-ux-autodoc-layout = false
sphinx-ux-badges = false

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
  "src",
  "tests",
]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs/conf.py",
  "tests/test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
  'class .*\bProtocol\):',
  "from __future__ import annotations",
  "import typing as t",
  "^\\s*\\.\\.\\.$",
  "^\\s*pass$",
  "^\\s*assert ",
  "^\\s*logger\\s*=",
  "^import ",
  "^from .* import",
  ": TypeAlias = ",
  "= t\\.TypeVar\\(",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "agentgrep",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
  "dataclasses",
  "random",
  "types",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--no-header",
  "--showlocals",
  "--doctest-modules",
]
doctest_optionflags = [
  "ELLIPSIS",
  "NORMALIZE_WHITESPACE",
]
testpaths = [
  "src/agentgrep",
  "tests",
]
asyncio_mode = "auto"
