[project]
name = "agentgrep"
version = "0.1.0a33"
description = "Read-only search for local AI agent prompts and history (Codex, Claude Code, Cursor, Gemini, Antigravity, Grok, Pi, OpenCode, VS Code)"
requires-python = ">=3.14,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

keywords = ["ai", "codex", "claude", "cursor", "gemini", "antigravity", "grok", "pi", "opencode", "vscode", "copilot", "mcp", "search", "agent-history"]
readme = "README.md"
packages = [
  { include = "*", from = "src" },
]
include = [
  { path = "tests", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "conftest.py", format = "sdist" },
]

dependencies = [
  "pydantic>=2.11.3",
  "textual>=3.2.0",
  "fastmcp>=3.0.0",
  "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
# orjson is an optional JSON-decode accelerator for the JSONL scanners.
# agentgrep runs without it; stdlib json stays the semantic source of truth
# (see docs/dev/adr/0002).
speedups = ["orjson>=3.10"]

[project.urls]
"Bug Tracker" = "https://github.com/tony/agentgrep/issues"
Repository = "https://github.com/tony/agentgrep"

[project.scripts]
agentgrep = "agentgrep.cli:main"
agentgrep-mcp = "agentgrep.mcp:main"

[project.entry-points.pytest11]
pytest-documentation = "pytest_documentation.plugin"

[dependency-groups]
dev = [
  # Docs
  "gp-sphinx==0.0.1a33",
  "sphinx-autodoc-api-style==0.0.1a33",
  "sphinx-autodoc-argparse==0.0.1a33",
  "sphinx-autodoc-fastmcp==0.0.1a33",
  "sphinx-gp-highlighting==0.0.1a33",
  "sphinx-gp-mermaid==0.0.1a33",
  "sphinx-autobuild",
  # Testing
  "pytest",
  "pytest-asyncio",
  "pytest-rerunfailures>=16.2",
  "pytest-watcher",
  # pytest-xdist powers the opt-in parallel `just test-fast` path. The docs
  # sandbox reuses the project venv read-only (UV_NO_SYNC) so workers skip
  # the cold per-process `uv run` build that otherwise times out in parallel.
  "pytest-xdist>=3.8.0",
  "syrupy>=5.1.0",
  # orjson is the optional JSON-decode accelerator (the `speedups` extra).
  # Installed in dev so the shared json/orjson behavioral tests exercise the
  # accelerated path; the runtime dependency stays optional.
  "orjson>=3.10",
  # The query Pygments lexer (agentgrep.query.pygments_lexer) imports pygments
  # directly; it is docs/test-only (not a runtime dependency). Transitive via
  # Sphinx, but pinned here so the lexer and its test stay importable.
  "pygments",
  # Lint / typecheck
  "ruff",
  "ty>=0.0.35",
  # scripts/mcp_swap.py is a PEP 723 standalone with `tomlkit` as its only
  # third-party dependency. The script is exercised by tests/test_mcp_swap.py,
  # which doesn't run through PEP 723, so we install tomlkit in the dev group
  # to make those tests importable.
  "tomlkit>=0.13",
  # scripts/benchmark.py is another PEP 723 standalone; same rationale —
  # tests/test_benchmark_script.py imports the script directly so its
  # third-party deps (typer plus the direct click import; pydantic and rich
  # are already in the runtime graph via the project itself / textual) need
  # to be project-importable.
  "click>=8.1",
  "typer>=0.12",
]
docs = [
  "gp-sphinx==0.0.1a33",
  "sphinx-autodoc-api-style==0.0.1a33",
  "sphinx-autodoc-argparse==0.0.1a33",
  "sphinx-autodoc-fastmcp==0.0.1a33",
  "sphinx-gp-highlighting==0.0.1a33",
  "sphinx-gp-mermaid==0.0.1a33",
  "sphinx-autobuild",
  # docs/_ext/lexers.py registers agentgrep.query.pygments_lexer, which imports
  # pygments directly (also transitive via Sphinx).
  "pygments",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.exclude-newer-package]
# git-pull packages release in lockstep with their workspaces, so a
# fresh release blocking on the 3-day cooldown blocks every
# contributor's `uv sync` until it clears. `false` exempts each
# from any `exclude-newer` constraint (global or per-user) without
# committing a date that would age into the lockfile. Mirrors the
# pattern at libtmux-mcp/pyproject.toml.
gp-furo-theme = false
gp-libs = false
gp-sphinx = false
sphinx-autodoc-api-style = false
sphinx-autodoc-argparse = false
sphinx-autodoc-docutils = false
sphinx-autodoc-fastmcp = false
sphinx-autodoc-pytest-fixtures = false
sphinx-autodoc-sphinx = false
sphinx-autodoc-typehints-gp = false
sphinx-fonts = false
sphinx-gp-highlighting = false
sphinx-gp-mermaid = false
sphinx-gp-opengraph = false
sphinx-gp-llms = false
sphinx-gp-sitemap = false
sphinx-gp-theme = false
sphinx-ux-autodoc-layout = false
sphinx-ux-badges = false

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
  "src",
  "tests",
]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs/conf.py",
  "tests/test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
  'class .*\bProtocol\):',
  "from __future__ import annotations",
  "import typing as t",
  "^\\s*\\.\\.\\.$",
  "^\\s*pass$",
  "^\\s*assert ",
  "^\\s*logger\\s*=",
  "^import ",
  "^from .* import",
  ": TypeAlias = ",
  "= t\\.TypeVar\\(",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "agentgrep",
  "pytest_documentation",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
  "dataclasses",
  "random",
  "types",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
# typer.Option / typer.Argument calls are metadata, not real callables —
# B008 does not apply. E501 is suppressed because a few error messages
# (e.g. the mutually-exclusive-selector message in _select_targets) read
# more naturally as one line than wrapped.
"scripts/benchmark.py" = ["B008", "E501"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--no-header",
  "--showlocals",
  "--doctest-modules",
]
doctest_optionflags = [
  "ELLIPSIS",
  "NORMALIZE_WHITESPACE",
]
testpaths = [
  "src/agentgrep",
  "src/pytest_documentation",
  "docs",
  "fastmcp.json",
  "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
