[project]
name = "agentgrep"
version = "0.1.0a40"
description = "Read-only search for local AI agent prompts and history (Codex, Claude Code, Cursor, Gemini, Antigravity, Grok, Pi, OpenCode, VS Code)"
requires-python = ">=3.14,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

keywords = ["ai", "codex", "claude", "cursor", "gemini", "antigravity", "grok", "pi", "opencode", "vscode", "copilot", "mcp", "search", "agent-history"]
readme = "README.md"

dependencies = [
  "pydantic>=2.11.3",
  "textual>=3.2.0",
  "fastmcp>=3.4.0",
  "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
# orjson is an optional JSON-decode accelerator for the JSONL scanners.
# agentgrep runs without it; stdlib json stays the semantic source of truth
# (see docs/dev/adr/0002).
speedups = ["orjson>=3.10"]

[project.urls]
"Bug Tracker" = "https://github.com/tony/agentgrep/issues"
Repository = "https://github.com/tony/agentgrep"

[project.scripts]
agentgrep = "agentgrep.cli:main"
agentgrep-mcp = "agentgrep.mcp:main"

[dependency-groups]
dev = [
  # Docs
  "gp-sphinx==0.0.1a34",
  "sphinx-autodoc-api-style==0.0.1a34",
  "sphinx-autodoc-argparse==0.0.1a34",
  "sphinx-autodoc-fastmcp==0.0.1a34",
  "sphinx-gp-highlighting==0.0.1a34",
  "sphinx-gp-mermaid==0.0.1a34",
  "sphinx-autobuild",
  # Testing
  "pytest",
  "pytest-asyncio",
  "pytest-rerunfailures>=16.2",
  "pytest-watcher",
  # pytest-xdist powers the opt-in parallel `just test-fast` path. The docs
  # sandbox reuses the project venv read-only (UV_NO_SYNC) so workers skip
  # the cold per-process `uv run` build that otherwise times out in parallel.
  "pytest-xdist>=3.8.0",
  "syrupy>=5.1.0",
  # orjson is the optional JSON-decode accelerator (the `speedups` extra).
  # Installed in dev so the shared json/orjson behavioral tests exercise the
  # accelerated path; the runtime dependency stays optional.
  "orjson>=3.10",
  # The query Pygments lexer (agentgrep.query.pygments_lexer) imports pygments
  # directly; it is docs/test-only (not a runtime dependency). Transitive via
  # Sphinx, but pinned here so the lexer and its test stay importable.
  "pygments",
  # Lint / typecheck
  "ruff",
  "ty>=0.0.58",
  # scripts/mcp_swap.py is a PEP 723 standalone with `tomlkit` as its only
  # third-party dependency. Keep tomlkit in the dev group so the module remains
  # directly importable during local script development.
  "tomlkit>=0.13",
  # scripts/benchmark.py is another PEP 723 standalone. Keep its direct click
  # and typer imports available during local script development; pydantic and
  # rich are already in the runtime graph via the project itself / textual.
  "click>=8.1",
  "typer>=0.12",
]
docs = [
  "gp-sphinx==0.0.1a34",
  "sphinx-autodoc-api-style==0.0.1a34",
  "sphinx-autodoc-argparse==0.0.1a34",
  "sphinx-autodoc-fastmcp==0.0.1a34",
  "sphinx-gp-highlighting==0.0.1a34",
  "sphinx-gp-mermaid==0.0.1a34",
  "sphinx-autobuild",
  # docs/_ext/lexers.py registers agentgrep.query.pygments_lexer, which imports
  # pygments directly (also transitive via Sphinx).
  "pygments",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The wheel deliberately ships only the agentgrep package.
# pytest_documentation is this repository's docs-suite harness: it is loaded
# explicitly via `-p` in addopts and must never auto-load in consumer
# environments (a pytest11 entry point once shipped without the package and
# broke every consumer pytest run at startup).
packages = ["src/agentgrep"]

[tool.uv.exclude-newer-package]
# git-pull packages release in lockstep with their workspaces, so a
# fresh release blocking on the 3-day cooldown blocks every
# contributor's `uv sync` until it clears. `false` exempts each
# from any `exclude-newer` constraint (global or per-user) without
# committing a date that would age into the lockfile. Mirrors the
# pattern at libtmux-mcp/pyproject.toml.
gp-furo-theme = false
gp-libs = false
gp-sphinx = false
sphinx-autodoc-api-style = false
sphinx-autodoc-argparse = false
sphinx-autodoc-docutils = false
sphinx-autodoc-fastmcp = false
sphinx-autodoc-pytest-fixtures = false
sphinx-autodoc-sphinx = false
sphinx-autodoc-typehints-gp = false
sphinx-fonts = false
sphinx-gp-highlighting = false
sphinx-gp-mermaid = false
sphinx-gp-opengraph = false
sphinx-gp-llms = false
sphinx-gp-sitemap = false
sphinx-gp-theme = false
sphinx-ux-autodoc-layout = false
sphinx-ux-badges = false

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
blanket-ignore-comment = "error"

[tool.ty.src]
include = [
  "src",
  "tests",
]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs/conf.py",
  "tests/test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "return NotImplemented",
  "def parse_args",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "@overload( |$)",
  'class .*\bProtocol\):',
  "from __future__ import annotations",
  "import typing as t",
  "^\\s*\\.\\.\\.$",
  "^\\s*pass$",
  "^\\s*assert ",
  "^\\s*logger\\s*=",
  "^import ",
  "^from .* import",
  ": TypeAlias = ",
  "= t\\.TypeVar\\(",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100", # future annotations
  "LOG", # flake8-logging
  "G", # flake8-logging-format
  "TD", # flake8-todos
  "FIX", # flake8-fixme
  "ANN", # flake8-annotations
  "N", # pep8-naming
  "T20", # flake8-print
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "FURB", # refurb
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
  "ANN401", # dynamically typed external boundaries intentionally use Any
  "PT018", # composite assertions are intentionally kept together
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "agentgrep",
  "pytest_documentation",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
  "dataclasses",
  "random",
  "types",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
# These modules own intentional terminal output.
"src/agentgrep/cli/render.py" = ["T201"]
# typer.Option / typer.Argument calls are metadata, not real callables —
# B008 does not apply. E501 is suppressed because a few error messages
# (e.g. the mutually-exclusive-selector message in _select_targets) read
# more naturally as one line than wrapped.
"scripts/benchmark.py" = ["B008", "E501"]
"scripts/mcp_swap.py" = ["T201"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
  "--no-header",
  "--showlocals",
  "--doctest-modules",
  "--strict-markers",
  # The docs-suite plugin is repo-local (not shipped in the wheel, no pytest11
  # entry point), so this run loads it explicitly.
  "-p",
  "pytest_documentation.plugin",
  # Keep the literal local loop fast. CI and `just test-all` clear this
  # expression explicitly so the exhaustive suite remains mandatory.
  "-m",
  "not slow",
]
doctest_optionflags = [
  "ELLIPSIS",
  "NORMALIZE_WHITESPACE",
]
markers = [
  "documentation: documentation contracts and executable examples",
  "mcp: MCP protocol, schema, and client integration coverage",
  "setup: packaging, configuration, and repository infrastructure",
  "slow: essential coverage excluded from the default local loop",
  "tui: Textual unit and mounted lifecycle coverage",
]
testpaths = [
  "src/agentgrep",
  "src/pytest_documentation",
  "docs",
  "fastmcp.json",
  "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# An xfail marker is a claim about a known gap, not a licence to pass quietly.
# Strict mode fails the suite when such a test starts passing, so a stale
# expectation has to be removed instead of drifting on as an XPASS.
xfail_strict = true
